--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Masters/Doctoral Thesis 
+% Masters/Doctoral Thesis
 % LaTeX Template
 % Version 1.43 (17/5/14)
 %
@@ -7,7 +7,7 @@
 % http://www.LaTeXTemplates.com
 %
 % Original authors:
-% Steven Gunn 
+% Steven Gunn
 % http://users.ecs.soton.ac.uk/srg/softwaretools/document/templates/
 % and
 % Sunil Patel
@@ -66,7 +66,7 @@
 }
 
 \usepackage{bibgerm} % Wenn man ein Literaturverzeichnis nach der Deutschen Norm haben will
-%\usepackage[square, comma]{natbib} % Use the natbib reference package - read up on this to edit the reference style; if you want text (e.g. Smith et al., 2012) for the in-text references (instead of numbers), remove 'numbers' 
+%\usepackage[square, comma]{natbib} % Use the natbib reference package - read up on this to edit the reference style; if you want text (e.g. Smith et al., 2012) for the in-text references (instead of numbers), remove 'numbers'
 \hypersetup{urlcolor=blue, colorlinks=true} % Colors hyperlinks in blue - change to black if annoying
 
 \newcommand{\thesisTitle}{Dokumententitel}
@@ -141,8 +141,9 @@
 % Uncomment the lines as you write the chapters
 
 \input{Chapters/Einleitung}
-\input{Chapters/Kapitel2}
-\input{Chapters/Kapitel3}
+\input{Chapters/Ermittlung}
+\input{Chapters/Typographie}
+\input{Chapters/Layout-Struktur}
 \input{Chapters/Fazit}
 
 %----------------------------------------------------------------------------------------
