--- a/latex/main.tex
+++ b/latex/main.tex
@@ -29,6 +29,7 @@
 
 \usepackage{listings} % Wenn man Code Listings benutzen will mit z.B. \begin{lstlisting}[language=Java] ... \end{lstlisting}
 \usepackage{color}
+\usepackage{gensymb}
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 \definecolor{lightgray}{rgb}{.9,.9,.9}
 \definecolor{darkgray}{rgb}{.4,.4,.4}
@@ -144,6 +145,8 @@
 \input{Chapters/Ermittlung}
 \input{Chapters/Typographie}
 \input{Chapters/Layout-Struktur}
+\input{Chapters/Whitespace}
+\input{Chapters/Farben}
 \input{Chapters/Fazit}
 
 %----------------------------------------------------------------------------------------
