Basic Content, still some formatting to do

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -147,6 +147,8 @@
 \input{Chapters/Layout-Struktur}
 \input{Chapters/Whitespace}
 \input{Chapters/Farben}
+\input{Chapters/Bilder}
+\input{Chapters/Interaktive-Elemente}
 \input{Chapters/Fazit}
 
 %----------------------------------------------------------------------------------------
