Added most content, some chapters still need cleaning up

--- a/latex/Bibliography.bib
+++ b/latex/Bibliography.bib
@@ -1,3 +1,7 @@
+%---------------------------
+% Herleitung
+%---------------------------
+
 @article{nickerson1998confirmation,
   title={Confirmation bias: A ubiquitous phenomenon in many guises.},
   author={Nickerson, Raymond S},
@@ -31,6 +35,10 @@
   publisher={Taylor \& Francis}
 }
 
+%---------------------------
+% Typographie
+%---------------------------
+
 @book{strizver2014type,
   title={Type Rules, Enhanced Edition: The Designer's Guide to Professional Typography},
   author={Strizver, Ilene},
@@ -43,6 +51,85 @@
   author={Baines, Phil and Haslam, Andrew},
   year={2005},
   publisher={Laurence King Publishing}
+}
+
+@article{josephson2008keeping,
+  title={Keeping your readers' eyes on the screen: An eye-tracking study comparing sans serif and serif typefaces},
+  author={Josephson, Sheree},
+  journal={Visual communication quarterly},
+  volume={15},
+  number={1-2},
+  pages={67--79},
+  year={2008},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{dogusoy2016serif,
+  title={How Serif and Sans Serif Typefaces Influence Reading on Screen: An Eye Tracking Study},
+  author={Dogusoy, Berrin and Cicek, Filiz and Cagiltay, Kursat},
+  booktitle={International Conference of Design, User Experience, and Usability},
+  pages={578--586},
+  year={2016},
+  organization={Springer}
+}
+
+@online{cssfontstack,
+title  = {CSS Font Stack: Web Safe and Web Font Family with HTML and CSS code},
+url    = {http://www.cssfontstack.com/}
+}
+
+@book{lupton2014thinking,
+  title={Thinking with type},
+  author={Lupton, Ellen},
+  year={2014},
+  publisher={Chronicle Books}
+}
+
+@BOOK{Runk200804, 
+title={Grundkurs Typografie und Layout: Für Ausbildung und Praxis (Galileo Design)},
+author={Claudia Runk},
+publisher={Galileo Design},
+year={2008},
+month={4},
+edition={2},
+isbn={9783836212076},
+url={http://amazon.de/o/ASIN/3836212072/},
+totalpages={317},
+timestamp={2016.12.09},
+}
+
+@ELECTRONIC{Lehnert201602, 
+title={Typoguide: A Pocket Guide to Master Every Day's Typographic Adventures (English Edition)},
+author={Benedikt Lehnert},
+publisher={Benedikt Lehnert},
+year={2016},
+month={2},
+edition={2},
+asin={B01BW0A5ME},
+url={http://amazon.de/o/ASIN/B01BW0A5ME/},
+timestamp={2016.12.09},
+}
+
+@book{livio2003golden,
+  title={The golden ratio},
+  author={Livio, Mario},
+  year={2003},
+  publisher={Aryeh Nir Publishers Limited}
+}
+
+@misc{W3C,
+  title = {C21: Specifying line spacing in CSS},
+  howpublished = {\url{http://web.archive.org/web/20160316091041/http://www.w3.org/TR/WCAG20-TECHS/C21.html}},
+  note = {Accessed: 29.06.2016}
+}
+
+@article{bernard2002effects,
+  title={The effects of line length on children and adults’ online reading performance},
+  author={Bernard, Michael and Fernandez, Marissa and Hull, Spring},
+  journal={Usability News},
+  volume={4},
+  number={2},
+  year={2002}
 }
 
 %---------------------------
