--- a/latex/titlepage.tex
+++ b/latex/titlepage.tex
@@ -11,49 +11,43 @@
 
 \vspace*{1cm}
 
-\HRULE \\
-\vspace*{-0.6cm}
-\HRule \\
+\begin{Huge}
+Praxisprojekt\\
+\end{Huge}
 
-	\begin{Huge}
-	Praxisprojekt\\
-	\end{Huge}
-	
-	\begin{huge}
-    	Titel
-	\end{huge}
-    
-\HRule \\
-\vspace*{-0.54cm}
-\HRULE \\
+\vspace*{0.5cm}
+
+\begin{LARGE}
+Ermittlung relevanter Themengebiete für die Entwicklung eines Tools zur Unterstützung beim erstellen von Gestaltungslösungen im Hochschulkontext
+\end{LARGE}
 
 \vspace*{1.5cm}
 
 \begin{large}
 	von\\
-    Student - 11098765\\
-        
+    Christian Alexander Poplawski - 11088931\\
+
 \vspace{1.0cm}
-	
+
 	an der Technology, Arts and Sciences TH Köln\\
     Campus Gummersbach\\
     im Studiengang Medieninformatik (Bachelor)\\
-    
+
 \vspace{1.0cm}
 
     \begin{tabular}{rl}
-        Betreuer:  &  Prof. Dr. Christian Kohls\\
+        Betreuer:  &  Prof. Dipl. Des. Christian Noss\\
        			   &  \small Technology, Arts and Sciences TH Köln \\[1.0em]
-       
+
 	\end{tabular}
-    
+
 \end{large}
 
 \vspace{1.5cm}
 
 Technology, Arts and Sciences TH Köln, \today \\
 
- 
+
 \vfill
 \end{center}
 
