--- a/latex/main.tex
+++ b/latex/main.tex
@@ -70,8 +70,8 @@
 %\usepackage[square, comma]{natbib} % Use the natbib reference package - read up on this to edit the reference style; if you want text (e.g. Smith et al., 2012) for the in-text references (instead of numbers), remove 'numbers'
 \hypersetup{urlcolor=blue, colorlinks=true} % Colors hyperlinks in blue - change to black if annoying
 
-\newcommand{\thesisTitle}{Dokumententitel}
-\newcommand{\authorName}{Student}
+\newcommand{\thesisTitle}{Praxisprojekt}
+\newcommand{\authorName}{Christian Alexander Poplawski}
 
 % PDF meta-data
 \hypersetup{pdftitle=\thesisTitle}
@@ -81,7 +81,7 @@
 
 \frontmatter % Use roman page numbering style (i, ii, iii, iv...) for the pre-content pages
 
-\setstretch{1.5} % Line spacing of 1.5
+\renewcommand{\baselinestretch}{1.0} % Line spacing of 1.5
 
 % Define the page headers using the FancyHdr package and set up for one-sided printing
 \fancyhead{} % Clears all page headers and footers
@@ -149,7 +149,7 @@
 \input{Chapters/Farben}
 \input{Chapters/Bilder}
 \input{Chapters/Interaktive-Elemente}
-\input{Chapters/Fazit}
+%\input{Chapters/Fazit}
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
