Mostly finished with Typography

--- a/latex/Bibliography.bib
+++ b/latex/Bibliography.bib
@@ -76,6 +76,7 @@
 @online{cssfontstack,
 title  = {CSS Font Stack: Web Safe and Web Font Family with HTML and CSS code},
 url    = {http://www.cssfontstack.com/}
+year   = {2016}
 }
 
 @book{lupton2014thinking,
