--- a/latex/Bibliography.bib
+++ b/latex/Bibliography.bib
@@ -155,6 +155,13 @@ timestamp={2016.12.09},
   year={2010}
 }
 
+@book{whelan1994color,
+  title={Color harmony},
+  author={Whelan, Bride},
+  year={1994},
+  publisher={Rockport Publishers}
+}
+
 @article{eysenck1941critical,
   title={A critical and experimental study of colour preferences},
   author={Eysenck, Hans J},
