--- a/latex/Bibliography.bib
+++ b/latex/Bibliography.bib
@@ -230,3 +230,14 @@ url    = {https://www.smashingmagazine.com/2016/04/web-developer-guide-color/}
   year={1978},
   organization={ACM}
 }
+
+%---------------------------
+% Bilder
+%---------------------------
+
+@book{enderle2012computer,
+  title={Computer Graphics Programming: GKS—The Graphics Standard},
+  author={Enderle, G{\"u}nter and Kansy, Klaus and Pfaff, G{\"u}nther},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
