Finished interactive elements

--- a/latex/Bibliography.bib
+++ b/latex/Bibliography.bib
@@ -241,3 +241,58 @@ url    = {https://www.smashingmagazine.com/2016/04/web-developer-guide-color/}
   year={2012},
   publisher={Springer Science \& Business Media}
 }
+
+%---------------------------
+% Interaktive Elemente
+%---------------------------
+
+@book{dix2009human,
+  title={Human-computer interaction},
+  author={Dix, Alan},
+  year={2009},
+  publisher={Springer}
+}
+
+@inproceedings{park2008touch,
+  title={Touch key design for target selection on a mobile phone},
+  author={Park, Yong S and Han, Sung H and Park, Jaehyun and Cho, Youngseok},
+  booktitle={Proceedings of the 10th international conference on Human computer interaction with mobile devices and services},
+  pages={423--426},
+  year={2008},
+  organization={ACM}
+}
+
+@misc{apple2016layout,
+ title = {Layout - Visual Design - iOS Human Interface Guidelines},
+ key = {Apple Inc.},
+ year = {2016},
+ url = {https://developer.apple.com/ios/human-interface- guidelines/visual-design/layout/},
+ note = {Accessed 17.12.2016}
+}
+
+@misc{google2016tap,
+ title = {Size Tap Targets Appropriately},
+ key = {Google Inc.},
+ year = {2016},
+ url = {https://developers.google.com/speed/docs/insights/SizeTapTargetsAppropriately},
+ note = {Accessed 17.12.2016}
+}
+
+@misc{microsoft2016traget,
+ title = {Guidelines for targeting},
+ key = {Microsoft Corporation},
+ year = {2016},
+ url = {https://msdn.microsoft.com/en-us/windows/uwp/input-and-devices/guidelines-for-targeting},
+ date = {12.14.2016},
+ note = {Accessed 17.12.2016}
+}
+
+@misc{nielsen2004guide,
+ title = {Guidelines for Visualizing Links},
+ author = {Jakob Nielsen},
+ url = {https://www.nngroup.com/articles/guidelines-for-visualizing-links/},
+ year = {2004},
+ note = {Accessed 17.12.2016}
+}
+
+
