--- a/latex/main.tex
+++ b/latex/main.tex
@@ -151,7 +151,7 @@
 \input{Chapters/Farben}
 \input{Chapters/Bilder}
 \input{Chapters/Interaktive-Elemente}
-%\input{Chapters/Fazit}
+\input{Chapters/Fazit}
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
