--- a/latex/Bibliography.bib
+++ b/latex/Bibliography.bib
@@ -134,6 +134,24 @@ timestamp={2016.12.09},
 }
 
 %---------------------------
+% Whitespace
+%---------------------------
+
+@book{white2011elements,
+  title={The elements of graphic design: space, unity, page architecture, and type},
+  author={White, Alex W},
+  year={2011},
+  publisher={Skyhorse Publishing Inc.}
+}
+
+@book{mayer2005einfuhrung,
+  title={Einf{\"u}hrung in die Wahrnehmungs-, Lern-und Werbe-Psychologie},
+  author={Mayer, Horst Otto},
+  year={2005},
+  publisher={Oldenbourg Verlag}
+}
+
+%---------------------------
 % Farben
 %---------------------------
 @article{cyr2010colour,
