Corrections in Typography

--- a/latex/Bibliography.bib
+++ b/latex/Bibliography.bib
@@ -133,6 +133,14 @@ timestamp={2016.12.09},
   year={2002}
 }
 
+@misc{w3c2016g18,
+ title = {G18: Ensuring that a contrast ratio of at least 4.5:1 exists between text (and images of text) and background behind the text},
+ key = {W3C},
+ url = {https://web.archive.org/web/20160914150636/http://www.w3.org/TR/2010/NOTE-WCAG20-TECHS-20101014/G18.html},
+ year = {2016},
+ note = {Accessed 18.12.2016}
+}
+
 %---------------------------
 % Whitespace
 %---------------------------
