--- a/latex/main.tex
+++ b/latex/main.tex
@@ -31,6 +31,7 @@
 \usepackage{color}
 \usepackage{gensymb}
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
+\usepackage{breakcites}
 \definecolor{lightgray}{rgb}{.9,.9,.9}
 \definecolor{darkgray}{rgb}{.4,.4,.4}
 \definecolor{purple}{rgb}{0.65, 0.12, 0.82}
@@ -125,11 +126,6 @@
 
 \input{verzeichnisse.tex}
 
-%----------------------------------------------------------------------------------------
-%	ABBREVIATIONS
-%----------------------------------------------------------------------------------------
-
-\input{abkuerzungen.tex}
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
@@ -153,11 +149,6 @@
 \input{Chapters/Interaktive-Elemente}
 \input{Chapters/Fazit}
 
-%----------------------------------------------------------------------------------------
-%	THESIS CONTENT - APPENDICES
-%----------------------------------------------------------------------------------------
-
-\input{anhang.tex}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
@@ -170,6 +161,6 @@
 %	Your institution may give you a different text to place here
 %----------------------------------------------------------------------------------------
 
-%\input{declaration.tex}
+\input{declaration.tex}
 
 \end{document}
