--- a/latex/declaration.tex
+++ b/latex/declaration.tex
@@ -9,19 +9,21 @@
 
 \vspace*{2cm}
 
-Ich versichere, die von mir vorgelegte Arbeit selbständig verfasst zu haben. Alle Stellen, die wörtlich oder sinngemäß aus veröffentlichten oder nicht veröffentlichten Arbeiten anderer entnommen sind, habe ich als entnommen kenntlich gemacht. Sämtliche Quellen und Hilfsmittel die ich für die Arbeit benutzt habe, sind angegeben. Die Arbeit hat mit gleichem Inhalt bzw. in wesentlichen teilen noch keiner anderen Prüfungsbehörde vorgelegen.\\
+Ich versichere, die von mir vorgelegte Arbeit selbständig verfasst zu haben. Alle Stellen, die wörtlich oder sinngemäß aus veröffentlichten oder nicht veröffentlichten Arbeiten anderer entnommen sind, habe ich als entnommen kenntlich gemacht. Sämtliche Quellen und Hilfsmittel die ich für die Arbeit benutzt habe, sind angegeben. Die Arbeit hat mit gleichem Inhalt bzw. in wesentlichen Teilen noch keiner anderen Prüfungsbehörde vorgelegen.\\
 
 \vspace*{2cm}
  
 \rule[1em]{25em}{0.5pt}\\ % This prints a line for the signature
 
-\vspace*{-1.5cm}
+\vspace*{-1.2cm}
 
 Datum, Ort\\
 
+\vspace*{1.5cm}
+
 \rule[1em]{25em}{0.5pt}\\ % This prints a line to write the date
 
-\vspace*{-1.5cm}
+\vspace*{-1.2cm}
 
 Unterschrift\\
 }
