--- a/latex/titlepage.tex
+++ b/latex/titlepage.tex
@@ -18,7 +18,7 @@ Praxisprojekt\\
 \vspace*{0.5cm}
 
 \begin{LARGE}
-Ermittlung relevanter Themengebiete für die Entwicklung eines Tools zur Unterstützung beim erstellen von Gestaltungslösungen im Hochschulkontext
+Ermittlung relevanter Themengebiete für die Entwicklung eines Tools zur Unterstützung beim Erstellen von Gestaltungslösungen im Hochschulkontext
 \end{LARGE}
 
 \vspace*{1.5cm}
