Minor Improvements in Typography

--- a/latex/Bibliography.bib
+++ b/latex/Bibliography.bib
@@ -118,6 +118,27 @@ timestamp={2016.12.09},
   publisher={Aryeh Nir Publishers Limited}
 }
 
+@BOOK{Bringhurst201301, 
+title={The Elements of Typographic Style: Version 4.0: 20th Anniversary Edition},
+author={Robert Bringhurst},
+publisher={Hartley and Marks Publishers},
+year={2013},
+month={1},
+edition={4th -20th Anniversary ed.},
+isbn={9780881792126},
+totalpages={382},
+timestamp={2016.12.19},
+}
+
+
+@misc{charchar2008scale,
+ author= {Alexander Charchar},
+ title = {The Typographic Scale},
+ url = {http://retinart.net/typography/typographicscale/},
+ year = {2008},
+ note = {Accessed 18.12.2016}
+}
+
 @misc{W3C,
   title = {C21: Specifying line spacing in CSS},
   howpublished = {\url{http://web.archive.org/web/20160316091041/http://www.w3.org/TR/WCAG20-TECHS/C21.html}},
